--- a/TvEngine3/Mediaportal/TV/Server/TVDatabase/EntityModel/packages.config
+++ b/TvEngine3/Mediaportal/TV/Server/TVDatabase/EntityModel/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
+  <package id="EntityFramework.SqlServerCompact" version="4.3.6" targetFramework="net40" />
   <package id="MySql.Data" version="6.7.9" targetFramework="net40" />
   <package id="MySql.Data.Entity" version="6.7.9" targetFramework="net40" />
+  <package id="SqlServerCompact" version="4.0.8482.1" targetFramework="net40" />
 </packages>
