--- a/TvEngine3/TVLibrary/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/TVLibrary/TVLibrary/TVLibrary.csproj
@@ -87,6 +87,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="UPnP">
@@ -229,6 +230,75 @@
     <Compile Include="Teletext\Implementations\TeletextPageRenderer.cs" />
     <Compile Include="Teletext\Implementations\ToptextDecoder.cs" />
     <Compile Include="TimeShiftingEPGGrabber.cs" />
+    <Compile Include="tve35\CommonTypes\Channel\LogicalChannelNumber.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\BroadcastStandard.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\ChannelGroupType.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\ChannelMediaType.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\ContentAdvisory.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\FecCodeRate.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\ModulationSchemePsk.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\ModulationSchemeQam.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\PilotTonesState.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\Polarisation.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\RollOffFactor.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\TunerEpgGrabberProtocol.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\BouquetFreeviewSatellite.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\BouquetOpenTvFoxtel.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\DishNetworkMarket.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\RegionFreesat.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\RegionOpenTvFoxtel.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\RegionOpenTvSkyNz.cs" />
+    <Compile Include="tve35\CommonTypes\Provider\RegionOpenTvSkyUk.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\AudioSelection.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\BitstreamSelect.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\ChannelType.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\EtmLocation.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\FrequencyBand.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\Hemisphere.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\InnerCodingMode.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\MatrixMode.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\ModulationFormat.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\ModulationMode.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\PathSelect.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\Polarisation.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\PolarisationType.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\ServiceType.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\ToneSelect.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\TransmissionMedium.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\TransmissionSystem.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\TransportType.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\VideoStandard.cs" />
+    <Compile Include="tve35\Implementations\Atsc\Enum\WaveformStandard.cs" />
+    <Compile Include="tve35\Implementations\Dvb\Enum\FecCodeRateDvbCS.cs" />
+    <Compile Include="tve35\Implementations\Dvb\Enum\Polarisation.cs" />
+    <Compile Include="tve35\Implementations\Dvb\Enum\RollOffFactor.cs" />
+    <Compile Include="tve35\Implementations\Dvb\Enum\RunningStatus.cs" />
+    <Compile Include="tve35\Implementations\Dvb\Enum\ServiceType.cs" />
+    <Compile Include="tve35\Implementations\Dvb\GrabberSiFreesatWrapper.cs" />
+    <Compile Include="tve35\Implementations\Scte\GrabberEpgScteWrapper.cs" />
+    <Compile Include="tve35\Implementations\Scte\GrabberSiScteWrapper.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\EncryptionState.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\ICallBackGrabber.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IChannelObserver.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberEpgAtsc.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberEpgDvb.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberEpgMhw.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberEpgOpenTv.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberEpgScte.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberSiAtsc.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberSiDvb.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberSiFreesat.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberSiMpeg.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IGrabberSiScte.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\IObserver.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\Iso639Code.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\ITsWriter.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\LogicalChannelNumber.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\PidType.cs" />
+    <Compile Include="tve35\Interfaces\Analyzer\PidUsage.cs" />
+    <Compile Include="tve35\TvLibraryInterfaces\Implementations\Dvb\DvbTextConverter.cs" />
+    <Compile Include="tve35\TvLibraryInterfaces\Implementations\ScannedChannel.cs" />
+    <Compile Include="tve35\TvLibraryInterfaces\Implementations\ScannedTransmitter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common-MP-TVE3\DirectShowLib\DirectShowLib.csproj">
