--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Knc/Knc.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/Knc/Knc.csproj
@@ -87,12 +87,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\..\..\..\..\..\Packages\KNC.BDA.Control.1.6.114\build\KNC.BDA.Control.targets" Condition="Exists('..\..\..\..\..\..\..\Packages\KNC.BDA.Control.1.6.114\build\KNC.BDA.Control.targets')" />
+  <Import Project="..\..\..\..\..\..\..\Packages\KNC.BDA.API.1.6.114\build\KNC.BDA.API.targets" Condition="Exists('..\..\..\..\..\..\..\Packages\KNC.BDA.API.1.6.114\build\KNC.BDA.API.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\..\..\..\..\..\Packages\KNC.BDA.Control.1.6.114\build\KNC.BDA.Control.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\..\..\Packages\KNC.BDA.Control.1.6.114\build\KNC.BDA.Control.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\..\..\..\Packages\KNC.BDA.API.1.6.114\build\KNC.BDA.API.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\..\..\Packages\KNC.BDA.API.1.6.114\build\KNC.BDA.API.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
