--- a/DirectShowFilters/Win7RefreshRateHelper/Win7RefreshRateHelper.vcxproj
+++ b/DirectShowFilters/Win7RefreshRateHelper/Win7RefreshRateHelper.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{CDE13610-062F-4DC8-B2BE-99EECA9AAA3E}</ProjectGuid>
     <RootNamespace>Win7RefreshRateHelper</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -21,7 +22,7 @@
     <UseOfMfc>false</UseOfMfc>
     <UseOfAtl>false</UseOfAtl>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
