--- a/DirectShowFilters/MPIPTVSource/MPIPTVSource/MPIPTVSource.vcxproj
+++ b/DirectShowFilters/MPIPTVSource/MPIPTVSource/MPIPTVSource.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{E127ECCB-8AAB-48C4-A4A3-0B9494911B86}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MPIPTVSource</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -27,7 +28,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
