--- a/DirectShowFilters/MPIPTVSource/MPIPTV_FILE/MPIPTV_FILE.vcxproj
+++ b/DirectShowFilters/MPIPTVSource/MPIPTV_FILE/MPIPTV_FILE.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{222C4851-2D07-49D4-84B5-694BB94CDA90}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MPIPTV_FILE</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -27,7 +28,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
