--- a/DirectShowFilters/MPIPTVSource/MPIPTV_RTP/MPIPTV_RTP.vcxproj
+++ b/DirectShowFilters/MPIPTVSource/MPIPTV_RTP/MPIPTV_RTP.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{9F04D2BF-9EAF-4A92-94D1-99A4F9E7CC75}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MPIPTV_RTP</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -27,7 +28,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
