--- a/DirectShowFilters/MPIPTVSource/MPIPTV_RTSP/MPIPTV_RTSP.vcxproj
+++ b/DirectShowFilters/MPIPTVSource/MPIPTV_RTSP/MPIPTV_RTSP.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{EDC12665-3070-4EFD-81B9-C2E487DAE0EA}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MPIPTV_RTSP</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -27,7 +28,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
