--- a/DirectShowFilters/MPWriter/MPWriter.vcxproj
+++ b/DirectShowFilters/MPWriter/MPWriter.vcxproj
@@ -14,6 +14,7 @@
     <ProjectName>MPFileWriter</ProjectName>
     <ProjectGuid>{4D369052-C13D-4013-91A7-688C86BC9652}</ProjectGuid>
     <RootNamespace>MPFileWriter</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -27,7 +28,7 @@
     <UseOfMfc>false</UseOfMfc>
     <UseOfAtl>false</UseOfAtl>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
