--- a/DirectShowFilters/mpc-hc_subs/src/mpc-hc_subs/mpc-hc_subs.vcxproj
+++ b/DirectShowFilters/mpc-hc_subs/src/mpc-hc_subs/mpc-hc_subs.vcxproj
@@ -15,13 +15,14 @@
     <ProjectGuid>{CEE9D3EA-D6F9-49F1-9D36-0C3C0789AE97}</ProjectGuid>
     <RootNamespace>mpchc_subs</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
