1. Rework provider settings to better account for the possibility of receiving out-of-area signals (eg. receiving Freesat and/or Sky UK in mainland Europe). 2. Enable explicit specification of LCN source preference at a provider/package level. 3. Improvement for cases when ONID is set as 0.

--- a/TvEngine3/Mediaportal/TV/Server/Common.Types/Common.Types.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Common.Types/Common.Types.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Enum\CamType.cs" />
     <Compile Include="Enum\ContentAdvisory.cs" />
     <Compile Include="Enum\ChannelGroupType.cs" />
+    <Compile Include="Enum\LogicalChannelNumberSource.cs" />
     <Compile Include="Enum\LogLevel.cs" />
     <Compile Include="Enum\EncodeMode.cs" />
     <Compile Include="Enum\QualityType.cs" />
