Changes pulled in from TVE 3.5: 1. Rework provider settings to better account for the possibility of receiving out-of-area signals (eg. receiving Freesat and/or Sky UK in mainland Europe). [No real effects in this branch.] 2. Enable explicit specification of LCN source preference at a provider/package level. 3. Improvement for cases when ONID is set as 0.

--- a/TvEngine3/TVLibrary/TVLibrary/TVLibrary.csproj
+++ b/TvEngine3/TVLibrary/TVLibrary/TVLibrary.csproj
@@ -236,6 +236,7 @@
     <Compile Include="tve35\CommonTypes\Enum\ChannelMediaType.cs" />
     <Compile Include="tve35\CommonTypes\Enum\ContentAdvisory.cs" />
     <Compile Include="tve35\CommonTypes\Enum\FecCodeRate.cs" />
+    <Compile Include="tve35\CommonTypes\Enum\LogicalChannelNumberSource.cs" />
     <Compile Include="tve35\CommonTypes\Enum\ModulationSchemePsk.cs" />
     <Compile Include="tve35\CommonTypes\Enum\ModulationSchemeQam.cs" />
     <Compile Include="tve35\CommonTypes\Enum\PilotTonesState.cs" />
@@ -275,6 +276,7 @@
     <Compile Include="tve35\Implementations\Dvb\Enum\RunningStatus.cs" />
     <Compile Include="tve35\Implementations\Dvb\Enum\ServiceType.cs" />
     <Compile Include="tve35\Implementations\Dvb\GrabberSiFreesatWrapper.cs" />
+    <Compile Include="tve35\Implementations\Dvb\OriginalNetwork.cs" />
     <Compile Include="tve35\Implementations\Scte\GrabberEpgScteWrapper.cs" />
     <Compile Include="tve35\Implementations\Scte\GrabberSiScteWrapper.cs" />
     <Compile Include="tve35\Interfaces\Analyzer\EncryptionState.cs" />
