Fork : WIP Naudio work from @RickDB to fix freeze on MP when using audio (Mute / Volume UP/DOWN).

--- a/mediaportal/MediaPortal.Application/MediaPortal.csproj
+++ b/mediaportal/MediaPortal.Application/MediaPortal.csproj
@@ -201,6 +201,10 @@
     <Reference Include="Microsoft.DirectX.DirectInput, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <SpecificVersion>True</SpecificVersion>
     </Reference>
+    <Reference Include="NAudio, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\Packages\NAudio.1.8.0\lib\net35\NAudio.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System">
       <Name>system</Name>
     </Reference>
@@ -271,6 +275,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="MediaPortal.exe.manifest" />
+    <None Include="packages.config" />
     <None Include="PostBuild.bat" />
     <Compile Include="..\..\Common-MP-TVE3\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
