--- a/TvEngine3/TVLibrary/TvLibrary.Interfaces/TvLibrary.Interfaces.csproj
+++ b/TvEngine3/TVLibrary/TvLibrary.Interfaces/TvLibrary.Interfaces.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Interfaces\ITvSubChannel.cs" />
     <Compile Include="Interfaces\IVideoStream.cs" />
     <Compile Include="Interfaces\TvPluginCallback.cs" />
+    <Compile Include="ISOTextDecoder.cs" />
     <Compile Include="Logging\FileLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Log.cs" />
