--- a/DirectShowFilters/TsWriter/MPTSWriter.vcxproj
+++ b/DirectShowFilters/TsWriter/MPTSWriter.vcxproj
@@ -67,7 +67,7 @@
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <AdditionalIncludeDirectories>$(SolutionDir)baseclasses;$(WINDOWS_SDK)Include; $(DXSDK_DIR)Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WINVER=0x0502;NDEBUG;WIN32; _WIN32; _CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WINVER=0x0600;NDEBUG;WIN32;_WIN32;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>false</StringPooling>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
@@ -179,6 +179,7 @@
     <ClCompile Include="source\LvctParser.cpp" />
     <ClCompile Include="source\NttParser.cpp" />
     <ClCompile Include="source\PmtGrabber.cpp" />
+    <ClCompile Include="source\RegistryUtil.cpp" />
     <ClCompile Include="source\SvctParser.cpp" />
     <ClCompile Include="source\TeletextGrabber.cpp" />
     <ClCompile Include="source\TextUtil.cpp" />
@@ -218,6 +219,8 @@
     <ClInclude Include="source\NttParser.h" />
     <ClInclude Include="source\PmtGrabber.h" />
     <ClInclude Include="source\BaseScteParser.h" />
+    <ClInclude Include="source\RegistryUtil.h" />
+    <ClInclude Include="source\stdafx.h" />
     <ClInclude Include="source\SvctParser.h" />
     <ClInclude Include="source\TeletextGrabber.h" />
     <ClInclude Include="source\TextUtil.h" />
