--- a/mediaportal/Core/Core.csproj
+++ b/mediaportal/Core/Core.csproj
@@ -397,6 +397,7 @@
     <Compile Include="Player\FFDShow\Interfaces\IffdshowDec.cs" />
     <Compile Include="Player\FFDShow\Interfaces\IffdshowDecVideo.cs" />
     <Compile Include="Player\LavInterfaces.cs" />
+    <Compile Include="Player\LAV\AudioPostEngine.cs" />
     <Compile Include="Player\LAV\LAVEngine.cs" />
     <Compile Include="Player\MadvrInterface.cs" />
     <Compile Include="Player\MediaInfoWrapper.cs" />
